# Zenith

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  application.properties  package-lock.json  pom.xml  run-ui-macos-linux.sh  run-ui-windows.bat
.claude/: settings.local.json
.github/workflows/: hugo-deploy.yml
Zenith-Data/: .gitignore  pom.xml
Zenith-Inference/: README.md  pom.xml
Zenith-Inference/nosql/: ZodiacCipher.js
Zenith-LanguageModel/: README.md  pom.xml
Zenith-Math/: README.md  pom.xml
Zenith-MutationSearch/: README.md  pom.xml
Zenith-Neural/: .gitignore  pom.xml
ciphers-lol/: zodiac340-3keys.json  zodiac340-4keys.json  zodiac340-evenodd.json  zodiac340-nkeys.json  zodiac340-nopluses.json  zodiac408-short.json
config/: zenith-config.json
site/: hugo.yaml
site/content/posts/: about.md  coming-soon.md
zenith-api/: .gitignore  README.md  pom.xml
zenith-genetic-algorithm/: README.md  pom.xml
zenith-inference/: .gitignore  README.md  pom.xml
zenith-language-model/: README.md  pom.xml
zenith-math/: README.md  pom.xml
zenith-mutation-search/: .gitignore  README.md  pom.xml
zenith-mutator/: README.md  pom.xml
zenith-package/: README.md  pom.xml
zenith-roulette/: README.md  pom.xml
zenith-transformer/: .gitignore  Cargo.toml  README.md
zenith-transformer/src/: lib.rs  main.rs
zenith-ui/: .gitignore  README.md  angular.json  karma.conf.js  package-lock.json  package.json  pom.xml  tsconfig.json
zenith-ui/src/: index.html  main.ts  polyfills.ts  proxy.conf.json  sb-admin-2.css  styles.css  test.ts
(+1031 files in other folders)
