[package]
name = "zenith-transformer"
version = "0.1.0"
edition = "2024"

[dependencies]
polars = { version = "0.52", features = ["lazy", "parquet", "timezones"] }
deunicode = "1.6.2"
candle-core = { git = "https://github.com/huggingface/candle.git", branch = "main", features = ["cuda"] } # this dependency is out of date in crates.io
candle-nn = { git = "https://github.com/huggingface/candle.git", branch = "main", features = ["cuda"] } # this dependency is out of date in crates.io
rand = "0.9.2"
clap = { version = "4.5.54", features = ["derive"] }
anyhow = "1.0.100"